--- a/templates/index.html
+++ b/templates/index.html
@@ -27,33 +27,23 @@
                 </div>
             </div>
             <div class="left">
-                <table class="table table-dark table-striped">
-                    <thead>
-                        <tr>
-                            <th>Command</th>
-                            <th>Description</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr style="overflow:scroll">
-                            <td>Show all users</td>
-                            <td>MATCH (user:users) RETURN user</td>
-                        </tr>
-                        <tr style="overflow:scroll">
-                            <td>Show all servers</td>
-                            <td>MATCH (server:servers) RETURN server</td>
-                        </tr>
-                        <tr style="overflow:scroll">
-                            <td>Show all relationships</td>
-                            <td>MATCH relations=()-->() RETURN relations</td>
-                        </tr>
-                        <tr style="overflow:scroll">
-                            <td>Show all users with X password</td>
-                            <td>MATCH (user:users) where user.password="{}" RETURN user</td>
-                        </tr>
-                    </tbody>
-                </table>
-    
+                <div class="table commands-section">
+                    <div class="title">Commands</div>
+                    <div class="commands">
+                        <a href="#" class="command" title="MATCH (user:users) RETURN user">
+                            Show all users
+                        </a>
+                        <a href="#" class="command" title="MATCH (server:servers) RETURN server">
+                            Show all servers
+                        </a>
+                        <a href="#" class="command" title="MATCH relations=()-->() RETURN relations">
+                            Show all relationships
+                        </a>
+                        <a href="#" class="command" title="MATCH (user:users) where user.password='{}' RETURN user">
+                            Show all users with X password
+                        </a>
+                    </div>
+                </div>    
             </div>
         </div>
         <div class="notifications">
