--- a/templates/index.html
+++ b/templates/index.html
@@ -12,16 +12,16 @@
             </div>
             <div class="right">
                 <div class="floating-btns">
-                    <a class="stabilize-graph floating-btn" id="stabilize" href="#" title="Stabilize">
+                    <a class="stabilize-btn floating-btn" id="stabilize" href="#" title="Stabilize">
                         <i class="fas fa-stop"></i> Stabilize
                     </a>
-                    <a class="stabilize-graph floating-btn" id="stabilize" href="#" title="Stabilize">
+                    <a class="stabilize-btn floating-btn" id="stabilize" href="#" title="Stabilize">
                         <i class="fas fa-stop"></i> Stabilize
                     </a>
-                    <a class="stabilize-graph floating-btn" id="stabilize" href="#" title="Stabilize">
+                    <a class="stabilize-btn floating-btn" id="stabilize" href="#" title="Stabilize">
                         <i class="fas fa-stop"></i> Stabilize
                     </a>
-                    <a class="stabilize-graph floating-btn" id="stabilize" href="#" title="Stabilize">
+                    <a class="stabilize-btn floating-btn" id="stabilize" href="#" title="Stabilize">
                         <i class="fas fa-stop"></i> Stabilize
                     </a>
                 </div>
@@ -44,6 +44,13 @@
                         </a>
                     </div>
                 </div>    
+            </div>
+            <div class="down">
+                <div class="pcaps">
+                    <a class="import-btn floating-btn" id="stabilize" href="#" title="Stabilize">
+                        <i class="fas fa-upload"></i>
+                    </a>
+                </div>
             </div>
         </div>
         <div class="notifications">
