--- a/templates/index.html
+++ b/templates/index.html
@@ -48,8 +48,8 @@
             <div class="down">
                 <div class="pcaps">
                     <a class="import-btn floating-btn" id="stabilize" href="#" title="Stabilize">
-                        <i class="fas fa-upload"></i>
-                    </a>
+                        <i class="fas fa-upload"></i></a>
+                    <a href="#" class="floating-btn toggle-pcap">baba.pcapng<input type="hidden" value="pcap-info>"></a>
                 </div>
             </div>
         </div>
