--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
                 <div class="pcaps">
                     <a class="import-btn floating-btn" id="stabilize" href="#" title="Stabilize">
                         <i class="fas fa-upload"></i></a>
-                    <a href="#" class="floating-btn toggle-pcap">baba.pcapng<input type="hidden" value="pcap-info>"></a>
+                    <a href="#" class="floating-btn toggle-pcap"><i class="fas fa-xmark remove-pcap"></i> baba.pcapng<input type="hidden" value="pcap-info>"></a>
                 </div>
             </div>
         </div>
@@ -89,6 +89,9 @@
                 <a class="import-btn floating-btn" id="stabilize" href="#" title="Stabilize">
                     <i class="fas fa-upload"></i>
                 </a>
+                <div class="hidden">
+                    <input type="file" id="upload-file" onchange="alert(1)">
+                </div>
             </div>
         </div>
     </div>
@@ -97,7 +100,7 @@
 
         </div>
     </div>
-
+    
     <div id="Graph"></div>
     <script src="{{ url_for('static', filename='assets/bootstrap-4.4.1-dist/js/jquery-3.6.0.min.js') }}"></script>
     <script src="{{ url_for( 'static', filename='js/neovis.js' ) }} "></script>
