Fix pcap remove for back.

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,8 @@
                 <div class="pcaps">
                     <a class="import-btn floating-btn" id="stabilize" href="#" title="Stabilize">
                         <i class="fas fa-upload"></i></a>
-                    <a href="#" class="floating-btn toggle-pcap"><i class="fas fa-xmark remove-pcap"></i> baba.pcapng<input type="hidden" value="pcap-info>"></a>
+                    <a href="#" class="floating-btn toggle-pcap active"><i class="fas fa-xmark remove-pcap"></i>baba.pcapng<input type="hidden" value="pcap-info>"></a>
+                    <a href="#" class="floating-btn toggle-pcap"><i class="fas fa-xmark remove-pcap"></i>ganush.pcapng<input type="hidden" value="pcap-info>"></a>
                 </div>
             </div>
         </div>
