--- a/templates/index.html
+++ b/templates/index.html
@@ -72,6 +72,10 @@
 
         </div>
     </div>
+    <div class="loader">
+        <div class="gif"><i class="fas fa-spinner fa-spin"></i></div>
+        <div class="percentage"><span class="per-number">10</span>%</div>
+    </div>
 
     <div id="Graph"></div>
     <script src="{{ url_for('static', filename='assets/bootstrap-4.4.1-dist/js/jquery-3.6.0.min.js') }}"></script>
