--- a/static/css/graph.css
+++ b/static/css/graph.css
@@ -28,7 +28,7 @@ body {
 .down {
     position: fixed;
     bottom: 0;
-    left: 550px;
+    left: 0px;
     z-index: 200;
 }
 
@@ -93,13 +93,38 @@ body {
 }
 
 .pcaps {
-    padding: 40px 20px;
+    padding: 20px 20px;
+}
+
+.pcaps form {
+    margin-block-end: 0;
 }
 
 .pcaps .import-btn {
+    background-color: #727a89;;
+    color: #ccd;
+    border-radius: 30px;
+    display: inline-block;
+}
+
+.pcaps .import-btn i {
+}
+
+.pcaps .import-btn-round {
     background-color: #06a821;
     color: #ccd;
-    padding: 20px;
+    display: block;
+    width: 60px;
+    height: 60px;
+    position: relative;
+    border-radius: 30px;
+}
+
+.pcaps .import-btn-round i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .pcaps .toggle-pcap {
@@ -140,7 +165,7 @@ body {
 .left-section {
     width: 500px;
     height: auto;
-    background-color: rgb(67, 72, 82);
+    background-color: #31353D;
     padding: 20px 30px;
     border-radius: 20px;
     box-shadow: 0px 0px 15px black;
@@ -165,7 +190,7 @@ body {
     padding: 5px 15px;
     font-size: 20px;
     text-align: center;
-    background-color: rgb(49, 53, 61);
+    background-color: rgb(63 69 79);
     margin-bottom: 10px;
     border-radius: 10px;
     box-shadow: 0px 0px 2px black;
@@ -181,7 +206,7 @@ body {
     color: #ccd;
     padding: 5px 10px;
     font-size: 20px;
-    background-color: rgb(49, 53, 61);
+    background-color: rgb(63 69 79);
     margin: 5px;
     border-radius: 10px;
     box-shadow: 0px 0px 2px black;
@@ -207,6 +232,7 @@ body {
     font-size: 32px;
     text-align: center;
     display: none;
+    color: rgb(222, 222, 233);
 }
 
 .loader .gif {
