--- a/templates/index.html
+++ b/templates/index.html
@@ -1,80 +1,84 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/graph.css') }}">
-        <link rel="stylesheet" href="{{ url_for('static', filename='assets/bootstrap-4.4.1-dist/css/bootstrap.min.css') }}">
-        <!--link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-4.4.1-dist/css/all.css') }}"-->
-        <link rel="stylesheet" href="{{ url_for('static', filename='assets/fontawesome-free-6.1.1-web/css/all.css') }}">
-    </head>
-    <body>
-        <div class="query">
-            <div class="up">
-                <input class="modern-input" id="query" name="query">
+
+<head>
+    <script src="{{ url_for( 'static', filename='js/socket.io.js' ) }} "></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/graph.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/bootstrap-4.4.1-dist/css/bootstrap.min.css') }}">
+    <!--link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-4.4.1-dist/css/all.css') }}"-->
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/fontawesome-free-6.1.1-web/css/all.css') }}">
+</head>
+
+<body>
+    <div class="query">
+        <div class="up">
+            <input class="modern-input" id="query" name="query">
+        </div>
+        <div class="right">
+            <div class="floating-btns">
+                <a class="stabilize-btn floating-btn" id="stabilize" href="#" title="Stabilize">
+                    <i class="fas fa-stop"></i> Stabilize
+                </a>
             </div>
-            <div class="right">
-                <div class="floating-btns">
-                    <a class="stabilize-btn floating-btn" id="stabilize" href="#" title="Stabilize">
-                        <i class="fas fa-stop"></i> Stabilize
-                    </a>
-                </div>
-            </div>
-            <div class="left">
-                <div class="table left-section">
-                    <div class="title">Commands</div>
-                    <div class="commands">
-                        <a href="#" class="command" title="MATCH relations=()-->() RETURN relations">
+        </div>
+        <div class="left">
+            <div class="table left-section">
+                <div class="title">Commands</div>
+                <div class="commands">
+                    <a href="#" class="command" title="MATCH relations=()-->() RETURN relations">
                                 Show all relationships
                         </a>
-                        <a href="#" class="command" title="MATCH (endpoint:endpoints) RETURN endpoint">
+                    <a href="#" class="command" title="MATCH (endpoint:endpoints) RETURN endpoint">
                                 Show all Endpoints
                         </a>
-                        <a href="#" class="command" title="MATCH relations=(source:endpoints)-[]->(destination:endpoints) where source.ip='{}' AND destination.ip='{x}' RETURN relations">
+                    <a href="#" class="command" title="MATCH relations=(source:endpoints)-[]->(destination:endpoints) where source.ip='{}' AND destination.ip='{x}' RETURN relations">
                                 Show spesific Address
                         </a>
-                    </div>
                 </div>
-                <div class="left-section">
-                    <div class="title">Protocols</div>
-                    <div class="options">
-                        {% for protocol in protocols["TCP"] %}
-                        <a href="#" class="opt toggle-opt" title="{{ protocol }}">
+            </div>
+            <div class="left-section">
+                <div class="title">Protocols</div>
+                <div class="options">
+                    {% for protocol in protocols["TCP"] %}
+                    <a href="#" class="opt toggle-opt" title="{{ protocol }}">
                                     {{ protocol }}
                             </a> {% endfor %} {% for protocol in protocols["UDP"] %}
-                        <a href="#" class="opt toggle-opt" title="{{ protocol }}">
+                    <a href="#" class="opt toggle-opt" title="{{ protocol }}">
                                         {{ protocol }}
                         </a> {% endfor %}
-                    </div>
                 </div>
             </div>
         </div>
-        <div class="down">
-            <div class="pcaps">
-                <form enctype="multipart/form-data" id="upload-pcap" method="POST" action="{{ url_for('upload_pcap') }}">
-                    <a class="import-btn floating-btn" id="stabilize" href="#" title="Stabilize">
-                        <i class="fas fa-upload"></i> Upload Pcap
-                    </a>
-                    <!--a class="import-btn-round floating-btn" id="stabilize" href="#" title="Stabilize">
+    </div>
+    <div class="down">
+        <div class="pcaps">
+            <form enctype="multipart/form-data" id="upload-pcap" method="POST" action="{{ url_for('upload_pcap') }}">
+                <a class="import-btn floating-btn" id="stabilize" href="#" title="Stabilize">
+                    <i class="fas fa-upload"></i> Upload Pcap
+                </a>
+                <!--a class="import-btn-round floating-btn" id="stabilize" href="#" title="Stabilize">
                         upload pcap <i class="fas fa-upload"></i>
                     </a-->
-                    <div class="hidden">
-                        <input type="file" name="pcap" id="upload-file" onchange='document.getElementById("upload-pcap").submit()'>
-                    </div>
-                </form>
-            </div>
+                <div class="hidden">
+                    <input type="file" name="pcap" id="upload-file" onchange='uploadPcap()'>
+                </div>
+            </form>
         </div>
-        </div>
-        <div class="notifications">
-            <div class="noti">
+    </div>
+    </div>
+    <div class="notifications">
+        <div class="noti">
 
-            </div>
         </div>
-        <div class="loader">
-            <div class="gif"><i class="fas fa-spinner fa-spin"></i></div>
-            <div class="percentage"><span class="per-number">10</span>%</div>
-        </div>
+    </div>
+    <div class="lpercentoader">
+        <div class="gif"><i class="fas fa-spinner fa-spin"></i></div>
+        <div class="percentage"><span class="per-number">0</span>%</div>
+    </div>
 
-        <div id="Graph"></div>
-        <script src="{{ url_for('static', filename='assets/bootstrap-4.4.1-dist/js/jquery-3.6.0.min.js') }}"></script>
-        <script src="{{ url_for( 'static', filename='js/neovis.js' ) }} "></script>
-        <script src="{{ url_for( 'static', filename='js/graph.js' ) }} "></script>
-    </body>
+    <div id="Graph"></div>
+    <script src="{{ url_for('static', filename='assets/bootstrap-4.4.1-dist/js/jquery-3.6.0.min.js') }}"></script>
+    <script src="{{ url_for( 'static', filename='js/neovis.js' ) }} "></script>
+    <script src="{{ url_for( 'static', filename='js/graph.js' ) }} "></script>
+</body>
+
 </html>
