Fixed loading sign.

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
 
             </div>
         </div>
-        <div class="lpercentoader">
+        <div class="loader">
             <div class="gif"><i class="fas fa-spinner fa-spin"></i></div>
             <div class="percentage"><span class="per-number">0</span>%</div>
         </div>
