--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <link rel="icon" href="{{ url_for('static', filename='pics/icon.png') }}" type="image/x-icon" />
     <script src="{{ url_for( 'static', filename='js/socket.io.js' ) }} "></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/graph.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/bootstrap-4.4.1-dist/css/bootstrap.min.css') }}">
