--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
     </div>
     <div class="loader">
         <div class="gif"><i class="fas fa-spinner fa-spin"></i></div>
-        <div class="percentage"><span class="per-number">0</span>%</div>
+        <div class="percentage"><span id="percentage" class="per-number">0</span>%</div>
     </div>
 
     <div id="Graph"></div>
