--- a/templates/index.html
+++ b/templates/index.html
@@ -83,6 +83,7 @@
     </div>
 
     <div id="Graph"></div>
+    <div class="rights">© All rights reserved @elad_pt | @dandan_arad - PVT 1.0</div>
     <script src="{{ url_for('static', filename='assets/bootstrap-4.4.1-dist/js/jquery-3.6.0.min.js') }}"></script>
     <!--script src="{{ url_for( 'static', filename='js/neo/driver.js' ) }} " type="module"></script>
         <script src="{{ url_for( 'static', filename='js/neo/vis-network.js' ) }} " type="module"></script-->
